tester/testsuite/good/order_binop2.jl
int main(){
    printInt(readInt() - readInt());
    return 0;
}