tester/testsuite/bad/bad009.jl
int main() {
        int x;
        x = true;
        return 1;
}
